--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             <g mask="url(#mask0)">
                 <path d="M9.19 145.96C34.02 76.58 114.86 54.72 184.11 29.48C245.8 6.98 311.86 -14.95 370.73 14.14C431.2 44.02 467.94 107.5 477.19 174.31C485.89 237.22 454.93 294.37 416.5 344.95C373.74 401.24 326.06 462.8 255.44 466.18C179.41 469.83 111.55 422.13 65.15 361.8C17.48 299.81 -17.16 219.58 9.19 145.96Z"/>
                 <!-- AVATAR -->
-                <image class="home__blob-img" x="50" y="60" href="assets/img/avatar.png"/>
+                <image class="home__blob-img"
+                       x="50"
+                       y="60"
+                       href="assets/img/z5450603428582_97330105244715585d7cad091c6584ec.jpg"/>
             </g>
         </svg>
     </div>
@@ -83,7 +86,7 @@
 
     <div class="about__container bd-grid">
         <div class="about__img">
-            <img src="assets/img/avatar.png" alt="avatar">
+            <img src="assets/img/z5450603428582_97330105244715585d7cad091c6584ec.jpg" alt="avatar">
         </div>
 
         <div>
